@@ -1162,3 +1162,5 @@ sstarted these clone on 12th of July, 2019
 
 [uuk]: changed system to apply an 3d view of the world to use MatrixStack-instances
 [uuk]: fixed ordering of world selection list (issue 213)
+[uuk]: improved data fixer system
+[uuk]: added WorldConfigFixer class for fixing the "config" entry of saves (the G.world.config attribute)
